# points-picker

./: .gitignore  .x  CMakeLists.txt  README.md  form.cpp  form.h  functions.cpp  functions.h  main.cpp  parsekml-geoportail.py  points-matrix.tpl  points_matrix.yaml  window.cpp  window.h
placewilson/: placewilson.kml  placewilson.points
